# Text-Data-Augmentation

./: .gitignore  README.md  pyproject.toml
tests/: test_abstractive_summarization.py  test_back_translation.py  test_character_noise.py  test_contextual_word_replacement.py  test_data.json  test_easy_data_augmentation.py  test_keyboard_noise.py  test_ocr_noise.py  test_paraphrasing.py  test_similar_word_replacement.py  test_synonym_replacement.py  test_text_data_augmentation.py  test_word_split.py
text-data-augmentation/: __init__.py  easy_data_augmentation.py  synonym_replacement.py
text_data_augmentation/: __init__.py  abstractive_summarization.py  back_translation.py  character_noise.py  contextual_word_replacement.py  easy_data_augmentation.py  keyboard_augmentation.py  keyboard_noise.py  ocr_augmentation.py  ocr_noise.py  paraphrasing.py  similar_word_replacement.py  synonym_replacement.py  word_split.py
