[tool.poetry]
name = "text-data-augmentation"
version = "0.7.0"
description = "Implementation of various techniques for text data augmentation"
authors = ["Ritvik19 <rastogiritvik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
