[tool.poetry]
name = "text-data-augmentation"
version = "1.2.1"
description = "State of the Text Data Augmentation for Natural Language Processing Applications"
authors = ["Ritvik19 <rastogiritvik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.5"
scikit-learn= "^1.0"
spacy = "^3.1.3"
tensorflow = "^2.6.0"
torch = "^1.9.1"
tqdm = "^4.62.3"
transformers = "^4.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
